# dayone

./: .gitignore  Dockerfile.app  Dockerfile.rookie  README.md  pyproject.toml
.github/workflows/: deploy.yml  e2e.yml  uptime.yml
docs/submission/: protopedia.md  video-plan.md
docs/submission/assets/: .gitignore  architecture.html
docs/submission/assets/build2/: list.txt
docs/submission/assets/cards/: card1.html  card2.html  card3.html  card4.html  card5.html  style.css  thumb.html
docs/superpowers/plans/: 2026-07-03-dayone.md
docs/superpowers/specs/: 2026-07-03-dayone-design.md
scripts/: build_final_video.sh  dev_server.py  e2e_check.py  gen_narration.py  gen_narration.sh  oss_validation.sh  record_demo.py  screenshot.py  setup_gcp.sh  setup_wif.sh
src/dayone/: __init__.py
src/dayone/app/: launcher.py  server.py
src/dayone/app/static/: index.html
src/dayone/common/: config.py  llm.py  models.py  store.py
src/dayone/rookie/: diagnostician.py  executor.py  github_client.py  judge.py  main.py  planner.py  prompts.py  reporter.py  sandbox.py  scoring.py
tests/: test_config.py  test_diagnostician.py  test_executor.py  test_llm.py  test_models.py  test_planner.py  test_reporter.py  test_rookie_main.py  test_sandbox.py  test_scoring.py  test_server.py  test_store.py
