[project]
name = "dayone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "1729kent", email = "kenk.river@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-cloud-firestore>=2.28.0",
    "google-cloud-run>=0.16.1",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
dayone-app = "dayone.app.server:main"
dayone-rookie = "dayone.rookie.main:main"

[tool.ruff]
line-length = 110
target-version = "py312"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
